# Physical-AI-Humanoid-Robotics-TextBook

./: RAG_CHATBOT_README.md  docusaurus.config.ts  package-lock.json  package.json  tsconfig.json
backend/: .gitignore  .vercelignore  chat.py  health.py  main.py  pyproject.toml  requirements.txt
backend/lib/: __init__.py  gemini_client.py  qdrant_client.py  rag.py  utils.py
backend/routers/: __init__.py  chat.py  health.py
backend/scripts/: index_documents.py
backend/scripts/lib/: __init__.py  chunker.py  embeddings.py
docs/module-3/: module3-chapter1.md
docs/module-4/: module4-chapter1.md
src/components/ChatContext/: ChatProvider.tsx  useChatContext.ts
src/components/ChatWidget/: ChatButton.tsx  ChatInput.tsx  ChatPanel.tsx  LoadingIndicator.tsx  MessageBubble.tsx  MessageList.tsx  index.tsx  styles.module.css  types.ts
src/hooks/: useChat.ts  useLocalStorage.ts
src/theme/: Root.tsx
src/utils/: api.ts
